--- a/_data/rngtool.yml
+++ b/_data/rngtool.yml
@@ -1,32 +1,54 @@
-- name: 0
+- name: 1.0
+  major: 1
+  minor: 0
   date: 2021-08-27
   build: 29
   src: false
-- name: 1
+- name: 1.1
+  major: 1
+  minor: 1
   date: 2021-08-31
   build: 48
   src: false
-- name: 1.1
+- name: 1.1.1
+  major: 1
+  minor: 1.1
   date: 2021-08-31
   build: 50
   src: false
-- name: 2
+- name: 1.2
+  major: 1
+  minor: 2
   date: 2021-09-05
   build: 56
   src: false
-- name: 3
+- name: 1.3
+  major: 1
+  minor: 3
   date: 2021-09-05
   build: 79
   src: false
-- name: 4
+- name: 1.4
+  major: 1
+  minor: 4
   date: 2021-09-06
   build: 86
   src: true
-- name: 5
+- name: 1.5
+  major: 1
+  minor: 5
   date: 2021-09-23
   build: 106
   src: true
-- name: 6
+- name: 1.6
+  major: 1
+  minor: 6
   date: 2021-09-27
   build: 142
+  src: true
+- name: 1.7
+  major: 1
+  minor: 7
+  date: 2021-10-16
+  build: 154
   src: true
